--- a/VIZIR/style.css
+++ b/VIZIR/style.css
@@ -398,7 +398,7 @@ button{
 	width: 100%;
 	height: .4rem;
 	border-radius: .08rem;
-	background-color: #2f3542;
+	background-color: #dba97c;
 	margin: 0 0 .16rem 0;
 	-webkit-user-select: none;
 	   -moz-user-select: none;
