--- a/WATCH/style.css
+++ b/WATCH/style.css
@@ -249,7 +249,7 @@ button{
 .card-intro-bg > img {
 	display: block;
 	width: 100%;
-	height: 100%;
+	height: 200%;
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
@@ -331,7 +331,7 @@ button{
 
 .mssgme-card {
 	width: calc(100% - .32rem);
-	margin: -.48rem auto 0 auto;
+	margin: .48rem auto 0 auto;
 	padding: .16rem;
 	border-radius: .13rem;
 	box-shadow: 0 .02rem .08rem 0 rgba(0, 0, 0, 0.08);
@@ -451,7 +451,7 @@ button{
 }
 
 .mssgme-card-messengers-list > li.viber {
-	background-color: #665cac;
+	background-color: #ffa200;
 }
 
 .mssgme-card-messengers-list > li.viber > a > span::before {
