--- a/IRIS/style.css
+++ b/IRIS/style.css
@@ -460,6 +460,16 @@ button{
 .mssgme-card-messengers-list > li.viber > a > span::before {
 	content: 'Viber';
 }
+.mssgme-card-messengers-list > li.btn {
+	background-image: url(../img/btn_animation.png);
+    background-position: 0 -151px;
+    background-repeat: no-repeat;    
+	background-image: url(img/insta.jpg);
+}
+
+.mssgme-card-messengers-list > li.btn > a > span::before {
+	content: 'btn';
+}
 
 .mssgme-card-messengers-list > li.instagram {
 	background-image: url(img/inst.jpg);
