--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ button{
 .card-intro-bg > img {
 	display: block;
 	width: 100%;
-	height: 100%;
+	height: 200%;
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
@@ -269,7 +269,6 @@ button{
 }*/
 
 .card-intro-bg.img::after {
-	content: '';
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -332,7 +331,7 @@ button{
 
 .mssgme-card {
 	width: calc(100% - .32rem);
-	margin: -.48rem auto 0 auto;
+	margin: .48rem auto 0 auto;
 	padding: .16rem;
 	border-radius: .13rem;
 	box-shadow: 0 .02rem .08rem 0 rgba(0, 0, 0, 0.08);
@@ -342,14 +341,17 @@ button{
 }
 
 .mssgme-card-header {
-	display: flex;
-	margin: 0 0 .16rem 0;
+	display: block;
+	width: 250px; /* Ширина элемента в пикселах */
+    padding: 10px; /* Поля вокруг текста */
+    margin: auto; /* Выравниваем по центру */
 }
 
 .mssgme-card-header-photo {
-	width: .7rem;
-	height: .7rem;
-	border-radius: 50%;
+	width: 150px; /* Ширина элемента в пикселах */
+    margin: auto; /* Выравниваем по центру */
+	border-radius: 50%; /* Круг */
+	margin-top: -50%;
 	overflow: hidden;
 }
 
@@ -362,12 +364,10 @@ button{
 }
 
 .mssgme-card-header-content {
-	display: flex;
-	flex-wrap: wrap;
+	display: block;
 	align-items: center;
-	justify-content: flex-start;
-	padding: 0 0 0 .16rem;
-	width: calc(100% - .7rem);
+	width: 100%;
+	margin: auto;
 }
 
 .mssgme-card-header-content-container > h1 {
@@ -375,7 +375,7 @@ button{
 	font-weight: 500;
 	font-size: .18rem;
 	line-height: .24rem;
-	margin: 0 0 .02rem 0;
+	margin: auto;
 }
 
 .mssgme-card-header-content-container > p {
@@ -383,7 +383,7 @@ button{
 	font-size: .14rem;
 	line-height: .18rem;
 	color: #888;
-	margin: 0;
+	margin: auto;
 }
 
 .mssgme-card-messengers-list {
@@ -434,13 +434,6 @@ button{
 .mssgme-card-messengers-list > li.telegram > a > span::before {
 	content: 'Telegram';
 }
-.mssgme-card-messengers-list > li.form {
-	background-color: #FFAB05;
-}
-
-.mssgme-card-messengers-list > li.form > a > span::before {
-	content: 'form';
-}
 
 .mssgme-card-messengers-list > li.vk {
 	background-color: #5b88bd;
@@ -459,11 +452,41 @@ button{
 }
 
 .mssgme-card-messengers-list > li.viber {
-	background-color: #665cac;
+	background-color: #6164aa;
 }
 
 .mssgme-card-messengers-list > li.viber > a > span::before {
 	content: 'Viber';
+}
+.mssgme-card-messengers-list > li.form { 
+	background-color: #f6ad33;
+}
+
+.mssgme-card-messengers-list > li.btn > a > span::before {
+	content: 'form';
+}
+
+.mssgme-card-messengers-list > li.instagram {
+	background-image: url(img/inst.jpg);
+}
+
+.mssgme-card-messengers-list > li.instagram > a > span::before {
+	content: 'instagram';
+}
+.mssgme-card-messengers-list > li.tel {
+	background-image: url(img/tel.jpg);
+}
+
+.mssgme-card-messengers-list > li.tel> a > span::before {
+	content: 'Позвонить';
+}
+
+.mssgme-card-messengers-list > li.site {
+	background-color: #9870a9;
+}
+
+.mssgme-card-messengers-list > li.site> a > span::before {
+	content: 'Наш сайт';
 }
 
 .mssgme-card-messengers-list > li > a {
@@ -876,7 +899,6 @@ button{
 	.card-footer-logo-container > a:hover {
 		background-color: #f3f3f3;
 	}
-
 
 	/* Edge hack */
 
